# MAP2FOMAP

./: .gitignore  CMakeLists.txt  main.cpp
Formats/: FallMap.cpp  FallMap.h  FallProto.cpp  FallProto.h  FallShared.cpp  FallShared.h
Utils/: BaseDataTypes.h  ByteReader.cpp  ByteReader.hpp  MemoryReader.cpp  MemoryReader.hpp
